--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+lib/*
 lib64/
 parts/
 sdist/
@@ -140,3 +140,6 @@ cython_debug/
 
 # VSCode settings
 .vscode/settings.json
+
+# Not ignore IBAPI
+!lib/ib/
