--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ verify_ssl = true
 
 [packages]
 backtrader = "*"
+ibapi = {path = "./lib/ib/ibapi-9.79.1-py3-none-any.whl"}
 
 [requires]
 python_version = "3.7"
