--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ pylint = "*"
 [packages]
 backtrader = "*"
 ibapi = {path = "./lib/ib/ibapi-9.79.1-py3-none-any.whl"}
+pytz = "*"
 
 [requires]
 python_version = "3.7"
