--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ pylint = "*"
 backtrader = "*"
 ibapi = {path = "./lib/ib/ibapi-9.79.1-py3-none-any.whl"}
 pytz = "*"
+typing-extensions = "*"
 
 [requires]
 python_version = "3.7"
