--- a/.gitignore
+++ b/.gitignore
@@ -113,6 +113,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.pyenv
 
 # Spyder project settings
 .spyderproject
@@ -139,7 +140,7 @@ dmypy.json
 cython_debug/
 
 # VSCode settings
-.vscode/settings.json
+.vscode
 
 # Not ignore IBAPI
 !lib/ib/
